--- a/index.html
+++ b/index.html
@@ -17,40 +17,15 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
             rel="stylesheet" />
-        <link rel="stylesheet" href="assets/css/style.css" />
     </head>
     <body>
         <div class="site">
-            <header class="site-header">
-                <h1 class="site-title">Henrique Picanço</h1>
-                <p>
-                    Encontre informações sobre meus projetos e caminhos úteis
-                    para os meus trabalhos usando os links abaixo.
-                </p>
-                <ul class="util-links">
-                    <li class="list-item">
-                        <button disabled="disabled">
-                            <!-- <a
-                                href="https://henriquepicanco.com"
-                                target="_blank"
-                                rel="author"> -->
-                            Site Oficial (em breve)
-                            <!-- </a> -->
-                        </button>
-                    </li>
-                    <li class="list-item">
-                        <button type="button">
-                            <a
-                                class="link"
-                                href="https://links.henriquepicanco.com"
-                                target="_blank"
-                                rel="author">
-                                Links úteis
-                            </a>
-                        </button>
-                    </li>
-                </ul>
-            </header>
+            <h1>Henrique Picanço</h1>
+            <p>Olá! Este site ainda está em cosntrução. Não tenho ideia do que colocar por aqui, mas esta página com alguns links importantes parece algo melhor do que havia aqui antes.</p>
+            <p>Siga-me no <strong>Bluesky</strong>, em <a href="https://henriquepicanco.bsky.social" target="_blank">henriquepicanco.bsky.social</a>!</p>
+            <p>Também estou no Instagram, em <a href="https://www.instagram.com/henriquepicanco" target="_blank">Instagram</a>.</p>
+            <p>Meus códigos estão no <strong>GitHub</strong>, em <a href="https://github.com/henriquepicanco" target="_blank">github.com/henriquepicanco</a> e no <strong>Codeberg</strong>, em <a href="https://codeberg.org/henriquepicanco" target="_blank">codeberg.org/henriquepicanco</a>.</p>
+            <p>Copyright (eu acho) - 2024</p>
         </div>
     </body>
 </html>
