--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Henrique Picanço</h1>
             <p>Olá! Este site ainda está em cosntrução. Não tenho ideia do que colocar por aqui, mas esta página com alguns links importantes parece algo melhor do que havia aqui antes.</p>
             <p>Siga-me no <strong>Bluesky</strong>, em <a href="https://henriquepicanco.bsky.social" target="_blank">henriquepicanco.bsky.social</a>!</p>
-            <p>Também estou no Instagram, em <a href="https://www.instagram.com/henriquepicanco" target="_blank">Instagram</a>.</p>
+            <p>Também estou no Instagram, em <a href="https://www.instagram.com/henriquepicanco" target="_blank">instagram.com/henriquepicanco</a>.</p>
             <p>Meus códigos estão no <strong>GitHub</strong>, em <a href="https://github.com/henriquepicanco" target="_blank">github.com/henriquepicanco</a> e no <strong>Codeberg</strong>, em <a href="https://codeberg.org/henriquepicanco" target="_blank">codeberg.org/henriquepicanco</a>.</p>
             <p>Copyright (eu acho) - 2024</p>
         </div>
